// Master Socket protocol 
syntax = "proto3";

package hw2;

service MasterServer{
	rpc ConnectionPoint(Empty) returns (ConnectionReply) {}
}
message ConnectionReply{
	repeated string locations = 1;
}
message Empty{

}
